--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -532,7 +532,7 @@ h2.title-outstanding
   color: #555
   background-color #fff
   background-image none
-  border 2px solid #f5f5f5
+  border 5px solid #f5f5f5
   border-radius 4px
   -webkit-box-shadow inset 0 1px 1px rgba(0, 0, 0, 0)
   box-shadow inset 0 1px 1px rgba(0, 0, 0, 0)
@@ -544,7 +544,7 @@ h2.title-outstanding
   box-shadow ease-in-out .15s
 
   &:focus
-    border-color #f5f5f5
+    border-color #ffffff
     outline 0
     -webkit-box-shadow 0 0 0 9px rgba(0, 0, 0, 0)
     box-shadow 0 0 0 9px rgba(0, 0, 0, 0)
