--- a/app/css/main.css
+++ b/app/css/main.css
@@ -122,7 +122,7 @@ header transition height 0.3s header.smaller nav a {
 #slider-area {
   background: url("../img/bg.jpg");
   padding-top: 35px;
-  padding-bottom: 400px;
+  padding-bottom: 285px;
   background-position: center center;
 }
 #slider-area .scrollme {
@@ -524,7 +524,7 @@ h2.title-outstanding {
   color: #ffa500;
 }
 .form-section {
-  background: #00cdff;
+  background: #f5f5f5;
   padding: 60px 0;
 }
 .form-section .title,
@@ -541,7 +541,7 @@ h2.title-outstanding {
   color: #555;
   background-color: #fff;
   background-image: none;
-  border: 5px solid #00cdff;
+  border: 5px solid #f5f5f5;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0);
   box-shadow: inset 0 1px 1px rgba(0,0,0,0);
@@ -553,7 +553,7 @@ h2.title-outstanding {
   box-shadow: ease-in-out 0.15s;
 }
 .form-control:focus {
-  border-color: #f5f5f5;
+  border-color: #fff;
   outline: 0;
   -webkit-box-shadow: 0 0 0 9px rgba(0,0,0,0);
   box-shadow: 0 0 0 9px rgba(0,0,0,0);
