--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1306,36 +1306,10 @@ header
   color #f5f5f5
   background-color cagreen
 
-/* Payment method */
-.paymentWrap
-  padding 50px
-  .paymentBtnGroup
-    max-width 800px
-    margin auto
-    .paymentMethod
-      padding 40px
-      box-shadow none
-      position relative
-      .method
-        position absolute
-        right 3px
-        top 3px
-        bottom 3px
-        left 3px
-        background-size contain
-        background-position center
-        background-repeat no-repeat
-        border 2px solid transparent
-        transition all 0.5s
-        &.paypal
-          background-image url("http://www.ayudapayoneer.com/wp-content/uploads/2015/10/payoneer-paypal-01.png")
-        &.bank-deposit
-          background-image url("https://elsoldemexico.com.mx/wp-content/uploads/2016/03/bancos.jpg")
-        &.credit-card
-          background-image url("http://www.doctoraboitiz.com/joomla30/images/Dr.Aboitiz/bienvenidas-sus-tarjetas-de-credito-y-debito.jpg")
-        &:hover
-          border-color rgba(0,0,0,.4)
-          outline none !important
+/* CartShop Details */
+.cart-detail-ship
+  padding 20px
+
 /*PROFILE*/
 .panel-title > span > label
   cursor pointer
