--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1560,42 +1560,8 @@ color
   color: #f5f5f5;
   background-color: #1887ce;
 }
-.paymentWrap {
-  padding: 50px;
-}
-.paymentWrap .paymentBtnGroup {
-  max-width: 800px;
-  margin: auto;
-}
-.paymentWrap .paymentBtnGroup .paymentMethod {
-  padding: 40px;
-  box-shadow: none;
-  position: relative;
-}
-.paymentWrap .paymentBtnGroup .paymentMethod .method {
-  position: absolute;
-  right: 3px;
-  top: 3px;
-  bottom: 3px;
-  left: 3px;
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  border: 2px solid transparent;
-  transition: all 0.5s;
-}
-.paymentWrap .paymentBtnGroup .paymentMethod .method.paypal {
-  background-image: url("http://www.ayudapayoneer.com/wp-content/uploads/2015/10/payoneer-paypal-01.png");
-}
-.paymentWrap .paymentBtnGroup .paymentMethod .method.bank-deposit {
-  background-image: url("https://elsoldemexico.com.mx/wp-content/uploads/2016/03/bancos.jpg");
-}
-.paymentWrap .paymentBtnGroup .paymentMethod .method.credit-card {
-  background-image: url("http://www.doctoraboitiz.com/joomla30/images/Dr.Aboitiz/bienvenidas-sus-tarjetas-de-credito-y-debito.jpg");
-}
-.paymentWrap .paymentBtnGroup .paymentMethod .method:hover {
-  border-color: rgba(0,0,0,0.4);
-  outline: none !important;
+.cart-detail-ship {
+  padding: 20px;
 }
 .panel-title > span > label {
   cursor: pointer;
