--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -64,18 +64,18 @@
                                                         </div>
                                                     </div>
                                                     <div class="row">
-                                                        <div class="col-xs-7 col-md-7">
+                                                        <div class="col-xs-12 col-md-7">
                                                             <div class="form-group">
                                                                 <label><span class="hidden-xs">FECHA DE EXPIRACIÓN</span>
                                                                     <span class="visible-xs-inline">EXP</span></label>
-                                                                <div class="col-xs-6" ng-class="{ 'has-error': Form.cardExpiryM.$touched && Form.cardExpiryM.$invalid }">
+                                                                <div class="col-md-6" ng-class="{ 'has-error': Form.cardExpiryM.$touched && Form.cardExpiryM.$invalid }">
                                                                     <input type="text" class="form-control"
                                                                            ng-model="Payment.payment.card.exp_month"
                                                                            name="cardExpiryM" maxlength="2"
                                                                            id="monthExpiry" placeholder="MM"
                                                                            data-conekta="card[exp_month]" required>
                                                                 </div>
-                                                                <div class="col-xs-6" ng-class="{ 'has-error': Form.cardExpiryY.$touched && Form.cardExpiryY.$invalid }">
+                                                                <div class="col-md-6" ng-class="{ 'has-error': Form.cardExpiryY.$touched && Form.cardExpiryY.$invalid }">
                                                                     <input type="text" class="form-control"
                                                                            ng-model="Payment.payment.card.exp_year"
                                                                            name="cardExpiryY" maxlength="4"
@@ -85,7 +85,7 @@
 
                                                             </div>
                                                         </div>
-                                                        <div class="col-xs-5 col-md-5 pull-right">
+                                                        <div class="col-xs-12 col-md-5 pull-right">
                                                             <div class="form-group" ng-class="{ 'has-error': Form.cardCVC.$touched && Form.cardCVC.$invalid }">
                                                                 <label for="cardCVC">CÓDIGO CV</label>
                                                                 <input type="text" class="form-control" name="cardCVC"
@@ -124,7 +124,6 @@
                             <div class="panel-body">
                                 <div class="row text-center">
                                     <div class="col-md-12">
-                                        <img src="../../img/paypal.png" alt="">
                                         <!--<p>Luego de hacer clic en "Finalizar el pedido", serás
                                             redirigido a PayPal para completar tu compra de forma segura.</p>-->
                                         <p>Proximamente, pordrá realizar su pago, con la facilidad de Paypal.</p>
