--- a/app/templates/shop/shipping.html
+++ b/app/templates/shop/shipping.html
@@ -103,14 +103,14 @@
                     </div>-->
                 </form>
             </div>
-            <div class="col-md-12 text-right" style="margin-top: 20px;">
+            <div class="col-md-12 text-right" style="margin-top: 30px;">
                 <a href="" class="btn btn-gray-clear" ui-sref="shopcart"><i class="fa fa-angle-left"></i> Regresar al carrito</a>
                 <!--<button class="btn btn-cart" ng-disabled="Form.$invalid" ng-click="Order.createOrder()">Continuar</button>-->
                 <a ng-if="Payment.address" class="btn btn-blue" type="submit" ng-disabled="!Payment.address" ng-click="Payment.saveShippingAddress()">Continuar</a>
                 <a ng-if="!Form.$invalid && !Payment.address" class="btn btn-blue" type="submit" ng-disabled="Form.$invalid" ng-click="Payment.newShippingAddress()">Continuar</a>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 cart-detail-ship">
             <ng-include src="'/templates/shop/partials/cart-details.html'"></ng-include>
         </div>
     </div>
