--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -12,32 +12,64 @@
 <hr class="no-margin">
 <section id="content-area" class="content-blog">
     <div class="content-pages" infinite-scroll='Product.getMorePosts(Product.slugItem)'
-         infinite-scroll-disabled='Product.busy || !Product.next'>
+         infinite-scroll-disabled='Product.busy || !Product.next || !Product.ready'>
         <div class="container">
             <div class="col-sm-3">
                 <div class="box-widget-white ng-scope">
                     <h4 class="widget-title-first">Filtrar por</h4>
                     <div class="box-widget-container">
-                        <select name="" id="price" class="form-control" ng-model="Product.selectFilter" ng-change="Product.filterbyPice()">
-                           <option value= "0" ng-model="Product.hola1">Más Vendidos</option>
-                           <option value="1">Alfabeticamente de A-Z</option>
-                           <option value="2">Precio menor</option>
-                           <option value="3">Precio mayor</option>
-                       </select>
+                        <select name="" id="price" class="form-control" ng-model="Product.selectFilter"
+                                ng-change="Product.getProductsFilter(Product.selectFilter)">
+                            <option value="1">Alfabeticamente de A-Z</option>
+                            <option value="2">Precio menor</option>
+                            <option value="3">Precio mayor</option>
+                        </select>
                     </div>
                     <h4 class="widget-title">Marcas</h4>
                     <div class="box-widget-container" style="padding-bottom: 5px;">
-                        <ul class="list">
-                            <li ng-repeat="children in Product.brands">
-                                <a href="#" target="_blank"><input type="checkbox" ng-model="children.id" ng-change="Product.getProductsFilter(children.slug)"> {{children.name}} </a>
-                            </li>
+                        <div ng-if="Product.brandSelected">
+                            <p>{{Product.brandSelected.name}}
+                                <a ng-click="Product.deleteFilter(Product.brandSelected, 'brand')">
+                                    <span class="glyphicon glyphicon-remove"></span>
+                                </a>
+                            </p>
+                        </div>
+                        <ul class="list" ng-if="!Product.brandSelected">
+                            <md-radio-group ng-model="Product.brandSelected"
+                                            ng-change="Product.getProductsFilter(Product.brandSelected)">
+                                <md-radio-button ng-repeat="children in Product.brands " ng-value="children"
+                                                 aria-label="{{ children.name }}" class="md-primary">
+                                    {{children.name}}
+                                </md-radio-button>
+                            </md-radio-group>
+                        </ul>
+                    </div>
+                    <h4 class="widget-title">Medidas</h4>
+                    <div class="box-widget-container" style="padding-bottom: 5px;">
+                        <div ng-if="Product.sizeSelected">
+                            <p>{{Product.sizeSelected.name}}
+                                <a ng-click="Product.deleteFilter(Product.sizeSelected, 'size')">
+                                    <span class="glyphicon glyphicon-remove"></span>
+                                </a>
+                            </p>
+                        </div>
+                        <ul class="list" ng-if="!Product.sizeSelected">
+                            <md-radio-group ng-model="Product.sizeSelected"
+                                            ng-change="Product.getProductsFilter(Product.sizeSelected)">
+                                <md-radio-button ng-repeat="children in Product.sizes " ng-value="children"
+                                                 aria-label="{{ children.name }}" class="md-primary">
+                                    {{children.name}}
+                                </md-radio-button>
+                            </md-radio-group>
                         </ul>
                     </div>
                     <h4 class="widget-title">Tipos</h4>
                     <div class="box-widget-container" style="padding-bottom: 5px;">
                         <ul class="list">
                             <li ng-repeat="children in Product.lines">
-                                <a href="#" target="_blank"><input type="checkbox" ng-model="children.id" ng-change="Product.getProductsFilter(children.slug)"> {{children.name}}</a>
+                                <a href="#" target="_blank"><input type="radio" ng-model="children.id"
+                                                                   ng-change="Product.getProductsFilter(children.slug)">
+                                    {{children.name}}</a>
                             </li>
                         </ul>
                     </div>
@@ -50,12 +82,12 @@
                     <div class="box-prod" ng-if="!Product.isPost">
                         <a ui-sref="product-detail({slug:product.slug})" title="Ver detalles del producto">
                             <div class="bg-prod"
-                                    style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
+                                 style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
                         </a>
                         <div class="box-container no-padding container-fluid">
                             <div class="col-sm-12 no-pd-l text-center">
                                 <p>{{product.name}}</p>
-                                    <h4 ng-if="Access.isAuthenticated()">{{ product.price | currency }}</h4>
+                                <h4 ng-if="Access.isAuthenticated ()">{{ product.price | currency }}</h4>
 
                             </div>
                         </div>
@@ -70,16 +102,17 @@
                                         ng-click="Product.setItem({id: product.id, image: product.featuredImage.url,
                                             name: product.name, price: product.price, qty: 1,
                                             taxonomies : product.taxonomies}, 1)"
-                                        ng-disabled="Product.itemInCart(product)" ng-if="Access.isAuthenticated()">Agregar
+                                        ng-disabled="Product.itemInCart(product)" ng-if="Access.isAuthenticated()">
+                                    Agregar
                                 </button>
                             </div>
                         </div>
                     </div>
-    
+
                     <div class="box-prod" ng-if="Product.isPost">
                         <a ui-sref="post_detail({slug:product.slug})">
                             <div class="bg-prod"
-                                    style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default }}')"></div>
+                                 style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default }}')"></div>
                             <h3 class="prod-descrip">{{product.title}}</h3>
                         </a>
                         <a ui-sref="post_detail({slug: product.slug})" class="btn btn-success btn-cart">Ver más</a>
