--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -11,6 +11,21 @@ monsyellow = #ffa500
 #facebook-styl
   iframe
     width 100%
+#brands
+  background-color white
+  padding 30px 0
+  .brand
+    height 150px
+    padding 10px
+    opacity 0.5
+    -webkit-transition: all ease .5s
+    -moz-transition: all ease .5s
+    -ms-transition: all ease .5s
+    -o-transition: all ease .5s
+    transition: all ease .5s
+    &:hover
+      opacity 1
+
 .comments
   border 1px solid #eee
   margin 25px 0
@@ -2213,5 +2228,44 @@ footer
   background-size cover
   height 70px
   background-position center
+#carousel-thumbnail
+  .thumbnail {
+    display: block;
+    padding: 4px;
+    margin-bottom: 20px;
+    line-height: 1.42857143;
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+    border-radius: 0;
+    border: none;
+    background-color: none;
+  }
+
+  .carousel-control {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 15%;
+    opacity: .5;
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+    text-shadow: none;
+  }
+  .carousel-control.left {
+    background-image: none;
+  }
+  .carousel-control.right {
+    left: auto;
+    right: 0;
+    background-image: none;
+  }
+
+  .carousel-control {
+    padding-top:10.25%;
+    width:5%;
+  }
+
 
 
