--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -74,7 +74,8 @@
                                             ng-click="Shop.setItem({id: product.id, image: product.featuredImage.url,
                                              name: product.name, price: product.price, qty: 1,
                                              taxonomies : product.taxonomies}, 1)"
-                                            ng-disabled="Shop.itemInCart(product)" ng-if="Access.isAuthenticated()">Comprar
+                                            ng-disabled="Shop.itemInCart(product)" ng-if="Access.isAuthenticated()">
+                                        Comprar
                                     </button>
                                 </div>
                             </div>
@@ -87,12 +88,15 @@
         <div class="col-sm-3">
             <div class="col-md-12 no-padding">
                 <div class="alert-orange">
-                    <h3><i class="fa fa-dollar fa-4x pull-left"></i> En la compra de <strong>$2500</strong> o más el envío es gratuito
+                    <h3><i class="fa fa-dollar fa-4x pull-left"></i> En la compra de <strong>$2500</strong> o más el
+                        envío es gratuito
                         en CDMX y área metropolitana.</h3>
                 </div>
             </div>
             <div id="facebook-styl" class="col-md-12 no-padding">
-                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMoonsCDMX%2F&tabs=timeline&width=300&height=400&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=510283729125304" width="250" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMoonsCDMX%2F&tabs=timeline&width=300&height=400&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=510283729125304"
+                        width="250" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                        allowTransparency="true"></iframe>
             </div>
             <div id="twitter-styl" class="col-md-12">
                 <a class="twitter-timeline" data-height="400" href="https://twitter.com/MOONS_AQUARIUMS">Tweets by
@@ -119,7 +123,8 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <textarea class="form-control" name="" id="message" width="100%" placeholder="Mensaje" required></textarea>
+                        <textarea class="form-control" name="" id="message" width="100%" placeholder="Mensaje"
+                                  required></textarea>
                     </div>
                     <button class="btn-orange btn-block"><i class="fa fa-envelope"></i> Enviar</button>
                 </form>
@@ -158,6 +163,14 @@
         </div>
     </div>
 </section>
+<!-- Set up your HTML -->
+<div id="brands">
+    <div class="container">
+        <div ng-repeat="brand in Home.brands" class="item col-sm-2 col-xs-6"><img class="brand"
+                                                                         src="{{ brand.featuredImage.url }}"
+                                                                         alt="{{ brand.title }}"></div>
+    </div>
+</div>
 
 
 
